# strife

./: .eslintignore  .eslintrc.js  .gitignore  .hintrc  .prettierrc  Cargo.toml  Guild.module.css  Guild.tsx  GuildList.module.css  README.md  TODO  Untitled-1.json  f.js  generateTypes.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  private.pem  public.pem  splashscreen.css  splashscreen.html  tsconfig.json  vite.config.ts  vitest.config.js
discord/: Cargo.toml
discord/src/: lib.rs
discord/src/types/: embed.rs  gateway.rs  guild.rs  message.rs  mod.rs  reaction.rs  sticker.rs  thread.rs  user.rs  voice.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns  icons.rar
src-tauri/src/: commands.rs  dev.rs  discord.rs  event_manager.rs  events.rs  gateway_handler.rs  main.rs  main_app_state.rs  manager.rs  mobile_auth_gateway_handler.rs  modules.rs  notifications.rs  test.rs  tests.rs  token_utils.rs  webview_packets.rs
src-tauri/src/commands/: auth.rs  general.rs  main_app.rs
src-tauri/src/discord/: constants.rs  gateway.rs  gateway_packets.rs  http_packets.rs  idk.rs  mobile_auth_packets.rs  types.rs  user.rs  voice_gateway_packets.rs
src-tauri/src/discord/gateway/: hello_packet.rs  (+2 more)
src-tauri/src/events/: auth.rs  main_app.rs
src-tauri/src/modules/: auth.rs  gateway.rs  gateway_old.rs  gateway_utils.rs  login.rs  main_app.rs  mobile_auth.rs  mobile_auth_gateway.rs  mobile_auth_gateway_handler.rs  remote_auth.rs  user_manager.rs  voice_gateway.rs  websocket.rs
src-tauri/src/proto/: Formated_Guilds.proto  d.proto
(+304 files in other folders)
